packages/typ/tests/fixtures/diagnostics/0350_optional_argument_call_mismatch_02.ml
let ( + ) (x : int) (y : int) : int = x
let add_beta ?(x = 1) (y : int) = x + y
let _ = add_beta ~x:true 2
